--- a/index.html
+++ b/index.html
@@ -101,39 +101,41 @@
                  <p>quaerat ut omnis sint, quas, suscipit impedit architecto aut alias magni delectus, quo cum. Eum quia sapiente error aliquid?</p>
          </section>
         </div> <!--Servicios-->
-    </main>
 
     <section>
     <h2>Contacto</h2>
-        <form action="">
+        <form class="formulario">
             <fieldset>
                 <legend>Contactanos llenando todos los campos</legend>
-                    <div>              
-                    <label for="">Nombre</label>
-                    <input type="text" placeholder="Tu nombre">
+                   
+                    <div class="contenedor-campos">
+                    <div class="campo">              
+                        <label for="">Nombre</label>
+                        <input class="input-text" type="text" placeholder="Tu nombre">
                     </div>    
 
-                    <div>
-                    <label for="">Telefono</label>
-                    <input type="tel" placeholder="Tu Teléfono">
+                    <div class="campo">
+                        <label for="">Telefono</label>
+                        <input class="input-text" type="tel" placeholder="Tu Teléfono">
                     </div>
 
-                    <div>
-                    <label for="">Correo</label>
-                    <input type="email" placeholder="Tu email">
+                    <div class="campo">
+                        <label for="">Correo</label>
+                        <input class="input-text" type="email" placeholder="Tu email">
                      </div>
 
-                     <div>
-                    <label for="">Mensaje:</label>
-                    <textarea></textarea>
+                     <div class="campo">
+                    <label class="input-text" for="">Mensaje:</label>
+                    <textarea class="input-text"></textarea>
                     </div>
-                    
-                    <div>
-                    <input type="submit" value="Enviar">
+                </div> 
+                    <div class="alinear-derecha">
+                    <input class="boton w-100" type="submit" value="Enviar">
                     </div>
              </fieldset>
         </form>
     </section>
+</main>
 
 <footer>
     <p>Todos los derechos reservados - Jonathan Lester Tullo Freelancer.</p>
