--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <section class="hero">
     <div class="contenido-hero">
         <h2>Diseño y Desarrollo Web Freelancer</h2>
+    
 
 
         <p>
@@ -44,7 +45,7 @@
 
 </section>
     <main class="contenedor sombra">
-     <h2>Mis Servicios</h2>
+     <h2 class="mis-servicios">Mis Servicios</h2>
     <div class="servicios">
 
         <section class="servicio">
@@ -129,15 +130,15 @@
                     <textarea class="input-text"></textarea>
                     </div>
                 </div> 
-                    <div class="alinear-derecha">
-                    <input class="boton w-100" type="submit" value="Enviar">
+                    <div class="alinear-derecha flex">
+                    <input class="boton w-sm-100" type="submit" value="Enviar">
                     </div>
              </fieldset>
         </form>
     </section>
 </main>
 
-<footer>
+<footer class="footer">
     <p>Todos los derechos reservados - Jonathan Lester Tullo Freelancer.</p>
 </footer>
 
