--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div> <!--Servicios-->
 
     <section>
-    <h2>Contacto</h2>
+    <h2 class="contacto-1">Contacto</h2>
         <form class="formulario">
             <fieldset>
                 <legend>Contactanos llenando todos los campos</legend>
