--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
 
 
-        <p>
+        <p class="scroll-contactar">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFC107" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <circle cx="12" cy="11" r="3" />
@@ -107,7 +107,7 @@
     <h2 class="contacto-1">Contacto</h2>
         <form class="formulario">
             <fieldset>
-                <legend>Contactanos llenando todos los campos</legend>
+                <legend class="texto-contacto">Contactanos llenando todos los campos</legend>
                    
                     <div class="contenedor-campos">
                     <div class="campo">              
@@ -138,7 +138,7 @@
     </section>
 </main>
 
-<footer class="footer">
+<footer class="footer-t">
     <p>Todos los derechos reservados - Jonathan Lester Tullo Freelancer.</p>
 </footer>
 
