--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
 
 
-        <p class="scroll-contactar">
+        <p class="contactar">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFC107" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <circle cx="12" cy="11" r="3" />
@@ -40,7 +40,7 @@
           </svg>
             Corrientes, Argentina</p>
 
-        <a class="boton" href="#">Contactar</a>
+        <a class="boton contactar-1" href="#">Contactar</a>
     </div>
 
 </section>
